# observml

./: .dockerignore  .gitignore  404.html  ExperimentHubAPI.py  README.md  ServiceAPI.py  WORKFLOW_TEST.md  api_commands.py  config.toml  data.yaml  docker-compose.yaml  full_deps.txt  hub_config.yaml  index.html  load_script.py  mindeps.txt  mkdocs.yml  mlflow.dockerfile  mmlw.py  objects.inv  pyproject.toml  requirements.txt  retrain_script.py  save_script.py  search.html  service.dockerfile  streamlit_frontend.dockerfile  streamlit_frontend.py  test_decision_tree_workflow.py  test_mlflow_fix.py  test_script.py  train_script_local.py  train_script_obj.py  workflow_test.py
api/: index.html
client/: index.html
configs/: config.yaml
configuration/: index.html
data/: Production_data.py  ar_csoft_oper.csv  cable_head_mach_27.csv  detect_dataset.xlsx  detect_test_0.xlsx  detect_test_1.xlsx  detect_test_2.xlsx  detect_test_3.xlsx  detect_test_4.xlsx  detect_test_5.xlsx  detect_test_6.xlsx  detect_test_7.xlsx  detect_train.xlsx  electric_time_series.xlsx  generate_splits.py  hmm_fault_diagnosis_dataset.csv  hmm_test.xlsx  hmm_train.xlsx  mmlw_data_for_rabbit_servo1.json  nador_format.json  proba.csv  proba.xlsx  pump_test.xlsx  pump_test_0.xlsx  pump_test_1.xlsx  pump_test_2.xlsx  pump_test_3.xlsx  pump_test_4.xlsx  pump_test_5.xlsx  pump_test_6.xlsx  pump_test_7.xlsx  ten_est_detect.xlsx  time_series_data.xlsx  time_series_test.xlsx  time_series_test_0.xlsx  time_series_test_1.xlsx  time_series_test_2.xlsx  time_series_test_3.xlsx  time_series_test_4.xlsx  (+5 more)
docs/: api.md  (+11 more)
(+83 files in other folders)
